Name:                TimeTrackerApi
Version:             0.1
Synopsis:            REST API for TimeTracker project
Description:         TimeTracker is a personal time tracking
License:             AllRightsReserved
Author:              Alexandre Corrêa Barbosa
Maintainer:          alexandre.correa@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable TimeTrackerApi
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    monad-control             >= 1.0   && < 1.1,
    mtl                       >= 2     && < 3,
    snap-core                 >= 1.0   && < 1.1,
    snap-server               >= 1.0   && < 1.1

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
